# microscopi

./: .gitignore  CHANGELOG.md  Microscopio_PRO_Documentacion.md  README.md  microscopi.py  microscopio.py  pyproject.toml
debian/: changelog  copyright  install  microscopi.1
microscopi/: actions.py  app.py  config.py  constants.py  engine.py  i18n.py  input.py  preview.py  renderer.py  state.py  ui.py  user_config.py  utils.py  video.py
microscopi/locale/: microscopi.pot
microscopi/locale/ca/LC_MESSAGES/: microscopi.mo  microscopi.po  microscopi.po~
microscopi/locale/es/LC_MESSAGES/: microscopi.mo  microscopi.po  microscopi.po~
scripts/: microscopi
